[gd_scene load_steps=4 format=3 uid="uid://d1p62rhud5731"]

[ext_resource type="Script" path="res://src/world.gd" id="1_h7s14"]
[ext_resource type="PackedScene" uid="uid://ceujuajux8q35" path="res://src/dungeon.tscn" id="1_ox068"]
[ext_resource type="PackedScene" uid="uid://pn7bc5ccesrr" path="res://src/player.tscn" id="2_xiut1"]

[node name="world" type="Node2D"]
script = ExtResource("1_h7s14")

[node name="dungeon" parent="." instance=ExtResource("1_ox068")]
position = Vector2(953, 543)
scale = Vector2(1.4, 1.4)
default_room_cnt = 31
max_try_to_spawn_room = 20

[node name="player" parent="." instance=ExtResource("2_xiut1")]
z_index = 10
speed = 1750.0
acceleration = 70.0
dashCost = 10
dashSpeed = 10000.0
dashAcceleration = 100.0
dashDuration = 0.25

[connection signal="death" from="player" to="." method="_on_player_death"]
[connection signal="healthChange" from="player" to="." method="_on_player_health_change"]
[connection signal="spellChange" from="player" to="." method="_on_player_spell_change"]
